k8s/overlays/prod/recursos-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: pedidos
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
